# nostop_agent

./: .gitignore  CMakeLists.txt  nostop_agent.kdev4  package.xml
.kdev4/: nostop_agent.kdev4
arduino/StateChangeDetection/: StateChangeDetection.ino
config/: name.xml
include/nostop_agent/: .kdev_include_paths  AgentAreaCreator.h  AgentInterface.h  AgentMotorControl.h  AgentProcess.h  AreaCreator.h  Configuration.h  Conversions.h  GlobalPreProcessor.h  GuardInterface.h  GuardNeighbours.h  GuardProcess.h  GuardStatePublisher.h  GuardStateUpdater.h  Learning.h  LearningInitialization.h  LearningInitializer.h  LearningProcess.h  MonitorReceiver.h  MotorControl.h  StatePublisher.h  StateUpdater.h  ThiefProcess.h  ThiefStatePublisher.h  WorldMap.h  iAgent.h  iGuard.h  iLocalizer.h  iThief.h
launch/: 10vs1.launch  1vs1.launch  1vs1_debug.launch  1vs1_debug_thief.launch  2vs1.launch  2vs1_debug.launch  3vs1.launch  3vs1_debug.launch  5vs1.launch  6vs1.launch  7vs1.launch  7vs1_debug.launch  AllAgents.launch  AllAgents_debug.launch  Guard.launch  Guard2.launch  Guard3.launch  Guard_debug.launch  Guard_debug2.launch  Thief.launch  only_guard_debug.launch  only_localizer_debug.launch  red_blue.launch  red_blue_motor.launch  red_yellow.launch  red_yellow_motor.launch  two2one.launch  yellow_green.launch
msg/: AgentMotorControlData.msg  GuardSensorCtrl.msg  GuardState.msg  GuardStateData.msg  Id_robot.msg  ThiefState.msg  ThiefStateData.msg
src/: .Guard.cpp.kate-swp  AgentAreaCreator.cpp  AgentMotorControl.cpp  AgentProcess.cpp  AreaCreator.cpp  Configuration.cpp  Conversions.cpp  Guard.cpp  GuardInterface.cpp  GuardNeighbours.cpp  GuardProcess.cpp  GuardStatePublisher.cpp  GuardStateUpdater.cpp  Learning.cpp  LearningInitialization.cpp  LearningInitializer.cpp  LearningProcess.cpp  MonitorReceiver.cpp  MotorControl.cpp  StatePublisher.cpp  StateUpdater.cpp  Thief.cpp  ThiefProcess.cpp  ThiefStatePublisher.cpp  WorldMap.cpp  iAgent.cpp  iGuard.cpp  iLocalizer.cpp  iThief.cpp
srv/: AreaData.srv  GuardBenefitData.srv  GuardNeighboursData.srv  PlayerConfigurationData.srv  PlayerIDData.srv  PlayerNotifyStatus.srv
