<?xml version="1.0"?>
<package>
  <name>nostop_agent</name>
  <version>0.0.0</version>
  <description>The nostop_agent package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nardi@mail.dm.unipi.it">SimoneNardi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>base_math</build_depend>
  <build_depend>nostop_learning</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>base_math</run_depend>
  <run_depend>nostop_learning</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend> 
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>